--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,116 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  box-sizing: content-box;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-color: #fff;
+}
+
+.header {
+  background: -webkit-linear-gradient(#628fb2, #1c5380); /* For Safari */
+  background: -o-linear-gradient(#628fb2, #1c5380); /* For Opera */
+  background: -moz-linear-gradient(#628fb2, #1c5380); /* For Firefox */
+  width: 100%;
+  height: 300px;
+}
+
+.phones_img {
+  position: relative;
+  float: left;
+  margin-top: -200px;
+  margin-left:15%;
+  width: 400px;
+}
+
+.brand_container {
+  float: left;
+  position: relative;
+  margin-top: -200px;
+  width: 504px;
+  padding: 0px;
+
+}
+.brand_img {
+position: absolute;
+float: left;
+margin: 0px;
+}
+
+.login_button {
+float: right;
+height: 40px;
+width: 100px;
+line-height: 40px;
+margin-top: 10px;
+padding-right: 10px;
+border: 1px solid #1c5380;
+text-align: center;
+text-decoration: none;
+font-size: 1em;
+color: #fff;
+text-shadow: 0 1px 1px rgba(0,0,0,.3);
+border-radius: 3px;
+background: -webkit-linear-gradient(#6D95B5, #42749C); /* For Safari */
+background: -o-linear-gradient(#6D95B5, #42749C); /* For Opera */
+background: -moz-linear-gradient(#6D95B5, #42749C); /* For Firefox */
+}
+
+.login_button img {
+  float: left;
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-right: 5px;
+}
+
+.info_container {
+  float: left;
+  position: relative;
+  margin-top: -110px;
+  margin-right: 10%;
+  margin-bottom: 10%;
+  width: 504px;
+}
+
+.content {
+  position: relative;
+  margin-top: -330px;
+  padding: 10%;
+}
+
+.content h1 {
+  color: #06365f;
+  line-height: 1.2em;
+}
+
+.content img {
+  padding-top: 20px;
+  margin-right: 10px;
+}
+
+.footer {
+  position: fixed;
+  width: 100%;
+  bottom: 0px;
+  padding: 30px;
+  margin-bottom: 30px;
+  text-transform:uppercase;
+  font-weight: 600;
+  font-size: 0.8em;
+  background-color: #fff;
+}
+
+.footer nav {
+  text-align: center;
+  color: #666;
+}
+
+.footer nav a {
+  color: #1c5380;
+  text-decoration: none;
+  margin-right: 15px;
 }
