--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,100 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.container-blue{
+  background-color: blue;
+  background-image: linear-gradient(#1c5380, #06365f);
+  height:300px;
+  width: 100%;
+  position: fixed;
+}
+
+.container-white{
+  background-color: white;
+  height:600px;
+  width: 100%;
+}
+
+.container{
+  margin: 0 auto;
+  width:90%;
+  margin-top: 10%;
+  margin-bottom: 20px;
+  position: fixed;
+  top:0;
+  left:5%;
+}
+
+.phones{
+  float:left;
+}
+.login{
+  float:right;
+  width:120px;
+  height:40px;
+  background-color: blue;
+  color:white;
+  margin-right: 10%;
+  margin-top:15px;
+  font-size: 16px;
+  font-weight: 600;
+  text-align: center;
+  background-color: #1c5380;
+  border: 1px #06365f solid;
+  padding-top: 10px;
+  border-radius: 5px;
+}
+
+h2{
+  color: #06365f;
+}
+
+.content{
+  margin-left: 350px;
+}
+
+.text{
+  background: url('../images/frame.png');
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  padding: 15px 40px;
+}
+
+.download{
+  margin: 40px auto;
+  text-align: center;
+}
+.margin-left{
+  padding-right: 15px;
+}
+
+.footer{
+  margin:0 auto;
+  text-align:center;
+  font-size: 14px;
+  font-weight: bold;
+  color:#06365f;
+  position:fixed;
+  left:22%;
+  top:80%;
+}
+
+ul {
+    list-style-type: none;
+    text-align:center;
+    margin-top: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+li {
+    float: left;
+    padding: 15px;
+}
+
+.copyright{
+  color:lightgray;
+}
