--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,99 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  box-sizing: border-box;
+}
+
+.content__wrapper {
+  width: 80%;
+  max-width: 1000px;
+  margin: 0 auto;
+  position: absolute;
+  top: 140px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 2;
+}
+
+.content__inside {
+  display: flex;
+}
+
+.column--left {
+  width: 33%;
+  max-width: 350px;
+  display: flex;
+  justify-content: center;
+}
+
+.column--right {
+  width: 66%;
+  margin-left: 50px;
+}
+
+.column--right__header {
+  display: flex;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
+.button--log-in {
+  margin-left: auto;
+  background: linear-gradient(#799ebc, #3d719a);
+  margin-right: 10px;
+  color: white;
+  height: 45px;
+  width: 70px;
+  padding: 0 5px;
+  display: flex;
+  align-items: center;
+  font-size: .9rem;
+  justify-content: space-around;
+  border-radius: 3px;
+box-shadow: 0 3px 3px rgba(0,0,0,.07)
+}
+
+.text-section__background {
+  background-image: url('/Users/DougChristie/Ironhack/week1/lab-css-instagram-clone/starter-code/images/frame.png');
+  display: flex;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.text-section__text {
+  width: 100%;
+  padding: 30px;
+  margin: 0 auto;
+}
+
+.banner--blue {
+  position: absolute;
+  width: 100%;
+  height: 300px;
+  background: #4b789e;
+  z-index: 1;
+}
+
+.footer__nav {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin-top: 30px;
+}
+
+
+.footer__link {
+  margin: 0 5px;
+  text-transform: uppercase;
+  font-size: .9rem;
+  color: #3d719a;
+  font-weight: bold;
+}
+
+.footer__copyright {
+  margin: 0 5px 0 10px;
+  text-transform: uppercase;
+  font-size: .9rem;
+  color: grey;
+  font-weight: bold;
 }
