--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,120 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.top {
+  width: 100%;
+  height: 400px;
+  background-color: #1c5380;
+ background: -webkit-linear-gradient(#587fa1 , #1c5380 );
+ background: -o-linear-gradient(#587fa1 , #1c5380 );
+ background: -moz-linear-gradient(#587fa1 , #1c5380 );
+ background: linear-gradient(#587fa1 , #1c5380 );
+  box-sizing: border-box;
+  min-width: 950px;
+}
+
+#iphone {
+  position: fixed;
+  top: 200px;
+  padding-left: 220px;
+  max-width: 350px;
+  max-height: 500px;
+
+}
+
+#instagram {
+  position: fixed;
+  top: 200px;
+  padding-left: 600px;
+}
+
+#home {
+  position: fixed;;
+  top: 220px;
+  padding-left: 990px;
+
+}
+
+button {
+  font-size: 15px;
+  font-weight: bold;
+  background:  #1c5380 ;
+ background: -webkit-linear-gradient(#587fa1 , #1c5380 );
+ background: -o-linear-gradient(#587fa1 , #1c5380 );
+ background: -moz-linear-gradient(#587fa1 , #1c5380 );
+ background: linear-gradient(#587fa1 , #1c5380 );
+  border-color: #325e84;
+  border: 1px solid;
+  border-radius: 3px;
+  padding: 5px 10px 5px 10px;
+}
+
+span {
+  color: white;
+  font-size: 14px;
+  font-weight: bold;
+  padding: 5px 10px 15px 10px;
+  margin: 0 auto;
+}
+
+.frame1 {
+  position: fixed;
+  top: 300px;
+  left: 600px;
+  max-width: 300px;
+  max-height: 500px;
+  list-style-image: url('images/phones.png');
+}
+
+h1 {
+  font-size: 30px;
+  color: #06365f;
+  position: fixed;
+  top: 300px;
+  left: 650px;
+  max-width: 400px;
+}
+
+#p1 {
+  position: fixed;
+  top: 400px;
+  left: 650px;
+  max-width: 400px;
+}
+
+.badges {
+  position: fixed;
+  top: 620px;
+  left: 650px;
+}
+
+#badgea {
+  padding-left: 15px;
+}
+
+.buttons {
+  position: fixed;
+  font-size: 14px;
+  top: 800px;
+  left: 300px;
+  color: #3e7bad;
+  font-weight: bold;
+}
+
+.buttons ul{
+  list-style: none;
+}
+
+.buttons li{
+  display: inline;
+}
+
+.buttons li {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+#insta {
+  color: gray;
+}
