--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -15,10 +15,7 @@ body {
   width: inherit;
   height: 500px;
   background: linear-gradient(#1c5380, #06365f);
-  /*background-color: #1c5380;
-  background-color: #06365f*/
-  /*border: 1px solid #17212e;*/
-  /*box-sizing:         border-box;*/
+
 }
 
 #phones{
@@ -28,6 +25,7 @@ body {
   padding-top: 50px;
   padding-left: 50px;
   float: left;
+  left: 200px;
 }
 
 #marcainsta{
@@ -37,7 +35,7 @@ body {
  padding-left: 400px;
  position: relative;
  top:-60px;
- left:400px;
+ left:450px;
 }
 
 #cuadrito{
@@ -45,7 +43,7 @@ body {
   border: 1px solid #17212e;
   padding: 10px 10px 10px 10px;
   position: relative;
-  left: 700px;
+  left: 850px;
   top: -70px;
   margin-top: 100px;
   margin-left: 50px;
@@ -58,26 +56,52 @@ body {
 
 }
 
+#cuadrito img{
+  display: inline;
+}
+
+#cuadrito p{
+  display: inline;
+  top:-5px;
+}
 
 .scuare-text{
 
     width: 500px;
-    height: 600px;
+    height: 500px;
     background-color: white;
     margin-left: 400px;
     text-align: justify;
     font-size: 22px;
     text-emphasis: 10px;
     position: relative;
-    
+    top: -300px;
+    left: 50px;
+    padding: 40px;
+    border-width: medium;
 
 }
 
+.scuare-text h2{
+  font-weight: bold;
+  color: #06365f;
+}
+
+.scuare-text img{
+  margin-left: 30px;
+  margin-right: 20px;
+}
+
 .container{
+  position: relative;
   width: auto;
   height: auto;
   align-content: center;
   margin-left: inherit;
+  left: 200px;
+  top: -200px;
   clear: both;
+  font-size: 26px;
+  font-weight: bolder;
 
 }
