--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,106 +1,124 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
+  /*
+  Colors to use:
+  dark blue: #06365f
+  light blue: #1c5380
+  */
 
-body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
-}
+  body {
+      font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+      margin: 0;
+  }
 
-.bluebox{
-  background-color: #4A779D;
-  width: 100%;
-  height: 30px;
-  padding: 80px; 40px;
-  z-index: -2;
-  display:block;
-}
+  .blue-box {
+      width: 100%;
+      height: 400px;
+      background-color: #1c5380;
+      background: -webkit-linear-gradient(#587fa1, #1c5380);
+      background: -o-linear-gradient(#587fa1, #1c5380);
+      background: linear-gradient(#587fa1, #1c5380);
+      box-sizing: border-box;
+      min-width: 950px;
+   }
 
-.login {
-  color: white;
-  padding: 5px;
-  background-color: #4A779D;
-  border: 1px solid #06365f;
-  border-radius: 2px;
-  font-size: 10px;
-  margin-right: 200px;
-  margin-top: 15px;
-  float: right;
-}
+   #phones {
+      position: fixed;
+      top: 200px;
+      padding-left: 220px;
+      max-width: 350px;
+      max-height: 500px;
 
-.login img{
-  width: 25%;
-  height: 25%;
-  float: left;
-  margin-right: 10px;
+   }
 
-}
+   #brand-logo {
+      position: fixed;
+      top: 200px;
+      padding-left: 600px;
+     }
 
-.phones img{
-  width: 25%;
-  height: 25%;
-  float: left;
-  margin-right: 30px;
-  margin-left: 50px;
-}
+   #login {
+      position: fixed;;
+      top: 220px;
+      padding-left: 990px;
 
-.logo img {
-  width: 20%;
-  height: 20%;
-}
+   }
 
-.frame img {
-  width: 50%;
-  height: 60%;
-  margin-left: -10px;
-  margin-top: -50px;
-  background-image: url("images/frame.png");
-}
+   button {
+      font-size: 15px;
+      font-weight: bold;
+      background:  #1c5380 ;
+      background: -webkit-linear-gradient(#587fa1 , #1c5380 );
+      background: -o-linear-gradient(#587fa1 , #1c5380 );
+      background: -moz-linear-gradient(#587fa1 , #1c5380 );
+      background: linear-gradient(#587fa1 , #1c5380 );
+      border-color: #325e84;
+      border: 1px solid;
+      border-radius: 3px;
+      padding: 5px 10px 5px 10px;
+   }
 
- h4 {
-  color: #06365f;
-  font-size: 18px;
+   span {
+       color: white;
+       font-size: 14px;
+       font-weight: bold;
+       padding: 5px 10px 20px 10px;
+    
+   }
 
-}
+   .content {
+       position: fixed;
+       top: 300px;
+       left: 600px;
+       max-width: 300px;
+       max-height: 500px;
+       list-style-image: url("images/phones.png");
+   }
 
-.frame .content {
-  margin-top: -300px;
-  margin-left: 450px;
-  width: 400px;
-  font-size: 14px;
-  display: block;
+     h3 {
+       font-size: 30px;
+       color: #06365f;
+       position: fixed;
+       top: 300px;
+       left: 650px;
+       max-width: 400px;
+   }
 
-}
+     p {
+       position: fixed;
+       top: 410px;
+       left: 650px;
+       max-width: 400px;
+   }
 
-.downloadiphone img{
-  float: left;
-  width: 10%;
-  height: 10%;
-  margin-top: 15px;
-  margin-left: 35px;
-}
+    .badges {
+      position: fixed;
+      top: 620px;
+      left: 650px;
+   }
 
-.downloadandroid img{
-  width: 9%;
-  height: 9%;
-  margin-top: 15px;
-  margin-left: 25px;
+    #badgeAndroid {
+      padding-left: 15px;
+   }
 
-}
+    .footer {
+      position: fixed;
+      font-size: 14px;
+      top: 800px;
+      left: 300px;
+      color: #3e7bad;
+      font-weight: bold;
+   }
 
-.footer {
-  clear: both;
-  font-weight: bold;
-  color:#1c5380;
-  font-size: 12px;
-  text-align: center;
-  margin-top: 70px;
-  word-spacing: 5px;
-}
-.footer span{
-  color: gray;
-  font-size: 10px;
-  margin-left: 15px;
-}
+     .footer ul{
+      list-style: none;
+   }
+
+    .footer li{
+      display: inline;
+      padding-left: 15px;
+      padding-right: 15px;
+   }
+
+
+    #insta {
+      color: gray;
+   }
