--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,107 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-color: #F0F0F0;
+}
+.landing-page-container{
+  position: relative;
+}
+#background-top {
+  position: absolute;
+  z-index: 0;
+  width: 100%;
+  height: 350px;
+  background-color: #1c5380;
+}
+#contents {
+  position: absolute;
+  z-index: 1;
+  margin: 5%;
+}
+#phones {
+  float: left;
+  margin: 5%;
+  width: 30%;
+  height: auto;
+}
+#brand {
+  float: left;
+  width: 30%;
+  height: 5%;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-top: 8%;
+  margin-bottom: 1%;
+}
+#homeBtn {
+  float: right;
+  margin-left: 5%;
+  margin-right: 6%;
+  margin-top: 10%;
+  margin-bottom: 1%;
+  padding: 5px 10px;
+  background: linear-gradient(#6e8ab2, #4c699b);
+  border: 1px solid #06365f;
+  border-radius: 4px;
+}
+#login-img {
+  float: left;
+  width: 30%;
+  height: auto;
+}
+#login-text {
+  float: right;
+  font-size: 1vw;
+  font-weight: bold;
+  color: white;
+}
+#frame {
+  width: 50%;
+  height: auto;
+  float: right;
+  margin-left: 5%;
+  margin-right: 5%;
+  background-image: url("../images/frame.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+#frame-contents{
+  margin-top: 5%;
+  margin-bottom: 5%;
+  margin-left: 6%;
+  margin-right: 6%;
+}
+.frame-item {
+}
+.frame-item.slogan {
+  color: #06365f;
+  font-size: 2vw;
+  font-weight: bold;
+}
+.frame-item.description {
+  color: #333333;
+  font-size: 1vw;
+}
+.frame-item.iOs {
+  width: 30%;
+  height: auto;
+  margin-right: 5%;
+}
+.frame-item.android {
+  width: 30%;
+  height: auto;
+  margin-left: 5%;
+}
+#footer {
+  position: absolute;
+  top: 100%;
+  left: 26%;
+}
+#footer .link {
+  color: #06365f;
+  font-weight: bold;
+}
+#footer .copyright {
+  color: darkgrey;
+  font-weight: bold;
 }
