--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,12 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.top {
+  height: 1000px;
+  background-color: #1c5380;
+}
+
+.bottom {
+  height: 1000px;
+}
