Phone images & frame added

--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -10,10 +10,18 @@ body {
 }
 
 .top {
-  height: 300px;
+  height: 1000px;
   background-color: #1c5380;
 }
 
 .bottom {
-  height: 400px;
+  height: 1000px;
+}
+
+#phones {
+  float: left;
+}
+
+.frame {
+
 }
