--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -30,9 +30,11 @@ body {
 }
 
 .frame {
+  position: absolute;
   border: 2px solid black;
   height: 500px;
   width: 500px;
+  float: left;
 }
 
 .frame-text {
