--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -28,24 +28,15 @@ body {
 
 #phones {
   position: absolute;
-  bottom: 185px;
-  left: 100px;
 }
 
-#brand {
-  position: absolute;
-  left: 370px;
-  bottom: 500px;
+#brand {}
 }
 
 .frame {
-  position: absolute;
   border: 2px solid black;
   height: 500px;
   width: 500px;
-  bottom: 200px;
-  left: 500px;
-
 }
 
 .frame-text {
