--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,121 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
+* {
+  margin: 0;
+  padding: 0;
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+.blue-background {
+  background-color: #4E7495;
+  height: 400px;
+  width: 100%;
+}
+.container {
+  width: 1200px;
+  margin: 0 auto;
+}
+
+/*=============================
+LEF SIDE
+================================*/
+.left-side {
+  margin-top: 150px;
+  width: 50%;
+  float: left;
+}
+.iphone-picture {
+  width: 420px;
+  float: right;
+  margin-right: 70px;
+}
+/*=============================
+RIGHT SIDE
+================================*/
+.right-side {
+  margin-top: 180px;
+  width: 50%;
+  float: right;
+}
+.instagram-logo {
+  float: left;
+  width: 320px;
+}
+.home-picture {
+  vertical-align: middle;
+  float: left;
+  margin-left: 12px;
+}
+button {
+  position: relative;
+  top: 12px;
+  width: 120px;
+  height: 50px;
+  border: 1px solid #517797;
+  float: right;
+  background-color: #4E7495;
+  border-radius: 3px;
+  color: #fff;
+  font-size: 15px;
+  font-weight: 600;
+  box-shadow: 0 0 15px 5px rgba(31, 73, 125, 0.8);
+}
+button p {
+  position: relative;
+  top: 2px;
+}
+h2 {
+  width: 320px;
+  font-size: 30px;
+  color: #143C5E;
+  margin-bottom: 20px;
+}
+p {
+  font-size: 20px;
+}
+.white-container {
+  clear: both;
+  position: relative;
+  top: 40px;
+  height: 300px;
+  background-color: #fff;
+  padding: 30px 50px;
+  border-radius: 2px;
+  border-bottom: none !important;
+  /*box-shadow: 0 0 15px 5px rgba(31, 73, 125, 0.8);*/
+  box-shadow: 0 9px 0px 0px white, 0 -9px 0px 0px white, 12px 0 15px -4px rgba(31, 73, 125, 0.8), -12px 0 15px -4px rgba(31, 73, 125, 0.8);
+
+}
+.appstore {
+  width: 200px;
+}
+.playstore {
+  width: 190px;
+}
+
+.appstore,
+.playstore {
+  margin-top: 40px;
+}
+.navbar-bot {
+  position: relative;
+  top: 60px;
+  clear: both;
+  text-align: center;
+
+}
+.nav-bot li {
+  list-style: none;
+  display: inline-block;
+  text-transform: uppercase;
+  margin-right: 10px;
+  margin-bottom: 60px;
+  color: #4E7495;
+  font-weight: 500;
+}
+.nav-bot span {
+  color: #bbb !important;
 }
