Removed floats in central container

--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -29,11 +29,11 @@ body {
 }
 
 #phones {
-  float: left;
+  position: absolute;
 }
 
 #brand {
-  float: left;
+  position: absolute;
 }
 
 .frame {
