Phone image changed from class to ID

--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -19,7 +19,7 @@ body {
 }
 
 .central-container {
-  position: relative;
+  position: absolute;
   margin: 0 auto;
   z-index: 1;
   width: 1000px;
