--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,158 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+h1 {
+  color: #06365f;
+}
+
+
+
+
+.blue-background {
+  height: 450px;
+  background-color: #1c5380;
+  border-bottom: 3px solid black;
+}
+
+.white-background {
+  height: 600px;
+}
+
+
+.content-container {
+  width: 1500px;
+  height: 700px;
+  margin-top: 200px;
+  margin-left: 175px;
+  /*background-color: green;*/
+  position: absolute;
+}
+
+.iphone-content-container {
+  width: 600px;
+  height: 700px;
+  margin-left: 45px;
+  background-image: url("../images/phones.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  /*background-color: teal;*/
+  float: left;
+}
+
+.instagram-information {
+  width: 800px;
+  height: 700px;
+  margin-left: 10px;
+  margin-right: 10px;
+  /*background-color: teal;*/
+  float: left;
+}
+
+.info-header {
+  width: 800px;
+  height: 110px;
+  /*background-color: indigo;*/
+}
+
+.logo-box {
+  width: 425px;
+  height: 110px;
+  margin-left: 25px;
+  background-image: url("../images/brand.png");
+  background-repeat: no-repeat;
+  /*background-color: maroon;*/
+  float: left;
+}
+
+.login-box{
+  width: 225px;
+  height: 110px;
+  margin-left: 100px;
+  margin-right: 25px;
+  /*background-color: maroon;*/
+  float: left;
+}
+
+.button {
+    background-color: #1c5380;
+    border: solid;
+    border-color: #06365f;
+    border-radius: 25px;
+    width: 200px;
+    height: 80px;
+
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+}
+
+
+
+.info-body {
+  width: 800px;
+  height: 450px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  padding-top: 15px;
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  /*background-color: indigo;*/
+
+}
+
+.paragraph-text {
+  font-size: 20px;
+
+}
+
+.paragraph-text-shift {
+  margin-left: 50px;
+
+}
+
+.info-footer {
+  width: 800px;
+  height: 110px;
+  /*background-color: indigo;*/
+}
+
+.appstore-box {
+  width: 250px;
+  height: 110px;
+  background-image: url("../images/badge-iphone.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  /*background-color: maroon;*/
+  margin-left: 100px;
+  margin-right: 50px;
+  float: left;
+
+}
+
+.andriod-market-box {
+  width: 250px;
+  height: 110px;
+  margin-left: 50px;
+  margin-right: 100px;
+  background-image: url("../images/badge-android.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  /*background-color: maroon;*/
+  float: left;
+}
+
+footer {
+  width: 1000px;
+  height: 200px;
+  color: #06365f;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 18px;
+  /*background-color: maroon;*/
+  clear: both;
+}
