--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,98 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+    margin=0;
+    padding=0;
+}
+
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+    font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.blueContainer {
+    background-color: #1c5380;
+    height: 350px;
+    width: 100%;
+}
+
+.mainContainer {
+    width: 1200px;
+    margin: 0 auto;
+}
+
+
+/* =============
+Left Side =====*/
+
+.leftContainer {
+    margin-top: 100px;
+    width: 50%;
+    float: left;
+}
+
+.leftContainer>img {
+    padding-left: 40px
+}
+
+
+/* ==============
+Right Side =====*/
+
+.rightContainer {
+    margin-top: 100px;
+    width: 490px;
+    float: left;
+}
+
+.instagramLogo {
+    float: left;
+    width: 320px;
+}
+
+button {
+    position: relative;
+    top: 12px;
+    width: 120px;
+    height: 50px;
+    border: 1px solid #517797;
+    float: right;
+    background-color: #4e7495;
+    border-radius: 3px;
+    color: #fff;
+    font-size: 15px;
+    font-weight: 600px;
+    box-shadow: 0 0 15px 5px rgba (31, 73, 125);
+}
+
+button>img {
+    float: left;
+    padding-top: 10px;
+}
+
+button>p {
+    position: relative;
+    bottom: 3px;
+}
+
+.whiteBox {
+    position: relative;
+    top: 15px;
+    width: 30%;
+}
+
+.whitebox>img {
+    float: right;
+}
+
+.whitebox>h3 {
+    width: 320px;
+    font-sie: 10px;
+    color: #143c5e;
+    margin-bottom: 20px;
+}
+
+.whitebox>p {
+    font-size: 20px;
+    width: 300px;
 }
