--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,86 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+.blue-background{
+  height: 250px;
+  background: -webkit-linear-gradient(#1c5380, #06365f);
+}
+.phones{
+  float:left;
+  position: relative;
+  top: -180px;
+  padding-left: 80px;
+}
+.brand{
+  float: left;
+  position:relative;
+  top: -160px;
+  padding-left: 50px;
+}
+.login{
+  float: left;
+  position: relative;
+  top: -145px;
+  left: 85px;
+  padding: 5px 10px 8px 10px;
+  background: -webkit-linear-gradient(#1c5380, #06365f);
+  border: ridge 0.4px #06365f;
+  font-weight: bold;
+  font-size: 14px;
+  color: white;
+  float: left;
+}
+.home{
+  position: relative;
+  top: 5px;
+}
+.frame{
+  float:left;
+  position: relative;
+  top: -105px;
+  right: 318px;
+}
+.text{
+  float:left;
+  width: 400px;
+  position: relative;
+  top: -380px;
+  left: 100px;
+  font-weight: 400;
+  font-size: 14px;
+}
+h2{
+  color:#06365f;
+  font-size: 23px;
+}
+.buttons{
+  position:relative;
+  right: 300px;
+  top: -65px;
+}
+.android{
+  padding-left: 18px;
+}
+#bottomnav{
+  clear: both;
+  position: relative;
+  top: -250px;
+  left: 200px;
+  float: left;
+}
+a{
+  padding-left: 20px;
+  font-size: 10px;
+  font-family: "Helvetica Neue";
+  text-decoration: none;
+  font-weight: bold;
+  color: #1c5380;
+}
+.copyright{
+  font-size: 10px;
+  position: relative;
+  top: -4px;
+  right: 90px;
+  font-weight: bold;
+  color: lightgrey;
+}
