--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,119 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+/*
+div {
+  border: 1px solid #17212e;
+}
+*/
+.top {
+  background: linear-gradient(#1c5380, #06365f);/* Standard syntax */
+  background-color: #1c5380;/* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(#1c5380, #06365f);/* For Safari 5.1 to 6.0 */
+  background: -moz-linear-gradient(#1c5380, #06365f);/* For Firefox 3.6 to 15 */
+  width: 100%;
+  height: 350px
+}
+
+.phone-picture {
+  position: fixed;
+  width: 320px;
+  height: 515px;
+  margin-left: 300px;
+  margin-top: 150px;
+}
+
+.logo-login {
+  position: fixed;
+  width: 800px;
+  height: 100px;
+  margin-left: 900px;
+  margin-top: 150px;
+}
+
+#logo {
+  position: absolute;
+  width: 350px;
+  height: 90px;
+  padding-left: 50px;
+  padding-top: 10px;
+}
+
+#login {
+  position: absolute;
+  width: 250px;
+  height: 80px;
+  padding-left: 550px;
+  padding-top: 20px;
+}
+
+button {
+  background-color: #1c5380;
+  background-image: url(../images/home.png);
+  background-position: 20px 12px;
+  background-repeat: no-repeat;
+  border: 2px solid #06365f;
+  color: white;
+  padding: 15px 32px;
+  text-align: right;;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 12px;
+  width: 150px;
+}
+
+.frame {
+  position: fixed;
+  width: 800px;
+  height: 400px;
+  margin-left: 900px;
+  margin-top: -60px;
+  background-image: url(../images/frame.png);
+  background-position: 50px -10px;
+  background-repeat: no-repeat;
+  background-size: 660px 400px;
+}
+
+#header {
+  width: 250px;
+  height: 90px;
+  padding-left: 150px;
+  color: #1c5380;
+}
+
+#text {
+  height: 220px;
+  margin-top: 0px;
+  padding-left: 150px;
+  padding-right: 247px;
+  font-size: 16px;
+}
+
+li {
+  display: inline;
+  padding-left: 110px;
+}
+
+.bottom {
+  width: 100%;
+  height: 450px;
+}
+
+.table {
+  position: fixed;
+  bottom: 80px;
+  width: 100%;
+  height: 30px;
+}
+
+table {
+  width: 80%;
+  padding-left: 400px;
+  text-transform: uppercase;
+  color: rgba(215, 219, 221, 0.8);
+}
+
+a {
+  text-decoration: none;
+  color: rgba(28, 83, 128, 0.8);
+}
